--- a/main.css
+++ b/main.css
@@ -1,16 +1,44 @@
+.opened {
+    display: block;
+}
+
+button {
+    font-family: 'Bree Serif', serif;
+}
+
+.closed {
+    display: none;
+}
+
+
+#admin {
+    margin-left: 4%;
+    line-height: 3;
+}
+
+#cancelLink {
+    margin-right: 1.5em;
+}
+
+label {
+    margin-right: 1em;
+}
+
 /* Three columns side by side */
 .column {
     float: left;
-    width: 33.3%;
+    width: 30.3%;
     margin-bottom: 16px;
     padding: 0 8px;
-    margin-left: 8%;
 }
 
 div#first {
     margin-left: 17%;
 }
 
+img#cat-img {
+    max-width: 90%;
+}
 
 /* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 650px) {
@@ -52,11 +80,13 @@ div#first {
 
 body {
     font-family: 'Bree Serif', serif;
+    margin-top: 4%;
 }
 
 h2 {
     font-size: 2vw;
     font-family: 'Bree Serif', serif;
+    line-height: 1;
 }
 
 p {
@@ -68,8 +98,9 @@ p {
     float: left;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-    width: 30%;
+    width: 24%;
     height: 30em;
+    margin-left: 5%;
 }
 
 .tab li {
